Closed Bug 579812 Opened 14 years ago Closed 14 years ago

VideoData mEndTime not updated when recomputing frame times in nsOggReader::DecodeVideoFrame

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: kinetik, Assigned: kinetik)

References

Details

Attachments

(1 file)

      No description provided.
Attached patch patch v0Splinter Review
Recompute frame end time when recomputing frame start time in DecodeVideoFrame.  This should've been done as part of bug 568431 but it was missed.
Assignee: nobody → kinetik
Status: NEW → ASSIGNED
Attachment #458241 - Flags: review?(chris)
Blocks: 568431
Blocks: 558306
Attachment #458241 - Flags: review?(chris) → review+
Keywords: checkin-needed
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/c4ec8505a4d4
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: