Bug 579812. Recompute frame end time when recomputing frame start time in DecodeVideoFrame. r=doublec